reorganizacion de carpetas y logica de login

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Cobro - Just Talk Academy</title>
-    <link rel="stylesheet" href="../public/login.css">
+    <link rel="stylesheet" href="../../public/login.css">
     
-    <script src="../renderer.js"></script> 
+
 </head>
 <body>
     <div class="container">
         <div class="left-panel">
             <div class="content">
-                <img src="Diseño.png" alt="Ilustración de Computador" class="computer-img">
+                <img src="../../public/Diseño.png" alt="Ilustración de Computador" class="computer-img">
             </div>
         </div>
         <div class="right-panel">
@@ -33,6 +33,6 @@
             </div>
         </div>
     </div>
-    <script src="../renderer.js"></script>
+    <script src="../../public/js/renderer.js"></script>
 </body>
 </html>
