manejo de rutas al dia

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -33,6 +33,6 @@
             </div>
         </div>
     </div>
-    <script src="../../public/js/renderer.js"></script>
+    <script src="../../public/js/loginRenderer.js"></script>
 </body>
 </html>
