--- a/src/views/dashboard.html
+++ b/src/views/dashboard.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Just Talk Academy</title>
-    <link rel="stylesheet" href="../public/dashboard.css">
+    <link rel="stylesheet" href="../../public/login.css">
     
-    <script src="../dashboard.js"></script> 
 </head>
 <body>
     <div class="dashboard-container">
@@ -63,6 +62,6 @@
         </div>
     </div>
 
-    <script src="../dashboard.js"></script>
+    <script src="../../public/js/dashboard.js"></script>
 </body>
 </html>
