Integracion de cursos/grupos y edicion

--- a/src/views/gestion.html
+++ b/src/views/gestion.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li class="active"><a href="#" id="view-users-btn">Gestión de Usuarios</a></li>
                     <li><a href="#" id="view-students-btn">Estudiantes</a></li>
+                    <li><a href="#" id="view-cursos-btn">Cursos</a></li>
                     <li><a href="#" id="logout-btn">Cerrar Sesión</a></li>
                 </ul>
             </nav>
