Arreglo de menu y vista de estudiantes. Falta implementar cierta logica

--- a/src/views/cursos.html
+++ b/src/views/cursos.html
@@ -16,7 +16,9 @@
             </div>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="#" id="back-to-gestion">Volver</a></li>
+                    <li><a href="#" id="view-users-btn">Gestión de Usuarios</a></li>
+                    <li><a href="#" id="view-students-btn">Estudiantes</a></li>
+                    <li><a href="#" id="view-cursos-btn">Cursos</a></li>
                     <li><a href="#" id="logout-btn">Cerrar Sesión</a></li>
                 </ul>
             </nav>
@@ -88,6 +90,7 @@
         </div>
     </div>
 
+    <script src="../../public/js/menu.js"></script>
     <script src="../../public/js/cursosGrupos.js"></script>
 </body>
 </html>
