--- a/src/views/gestion.html
+++ b/src/views/gestion.html
@@ -149,6 +149,7 @@
         </div>
     </div>
 
+    <script src="../../public/js/menu.js"></script>
     <script src="../../public/js/gestion.js"></script>
 </body>
 </html>
