--- a/src/views/cursos.html
+++ b/src/views/cursos.html
@@ -19,7 +19,7 @@
                     <li><a href="#" id="view-users-btn">Gestión de Usuarios</a></li>
                     <li><a href="#" id="view-students-btn">Estudiantes</a></li>
                     <li><a href="#" id="view-cursos-btn">Cursos</a></li>
-                    <li><a href="#" id="logout-btn">Cerrar Sesión</a></li>
+                    <li class="logout-container"><button id="logout-btn" class="logout-btn" title="Cerrar sesión"><img src="../../public/MiLogOut.png" alt="Salir"/></button></li>
                 </ul>
             </nav>
         </aside>
