Correcion de errores, nuevo seed

--- a/src/views/estudiantes.html
+++ b/src/views/estudiantes.html
@@ -69,8 +69,10 @@
                             <tr>
                                 <th>Nombre</th>
                                 <th>Edad</th>
-                                <th>Últimos 3 pagos</th>
-                                    <th>Acciones</th>
+                                <th id="header-mes-pasado">Mes Pasado</th>
+                                <th id="header-mes-actual">Mes Actual</th>
+                                <th id="header-mes-proximo">Mes Próximo</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="students-table-body"></tbody>
