--- a/src/views/gestion.html
+++ b/src/views/gestion.html
@@ -20,6 +20,7 @@
                     <li class="active"><a href="#" id="view-users-btn">Gestión de Usuarios</a></li>
                     <li><a href="#" id="view-students-btn">Estudiantes</a></li>
                     <li><a href="#" id="view-cursos-btn">Cursos</a></li>
+                    <li><a href="#" id="view-deudores-btn">Deudores</a></li>
                     <li class="logout-container"><button id="logout-btn" class="logout-btn" title="Cerrar sesión"><img src="../../public/MiLogOut.png" alt="Salir"/></button></li>
                 </ul>
             </nav>
@@ -27,8 +28,6 @@
 
         <main class="content-area">
             <h1>Gestión de Usuarios</h1>
-
-            <!-- Para agregar estudiantes usa la vista específica de Estudiantes -->
 
             <div class="user-table-container">
                 <table>
@@ -47,7 +46,6 @@
                 <p id="no-users-message" class="info-message" style="display: none;">No hay usuarios registrados.</p>
             </div>
 
-                <!-- Modal para agregar estudiante -->
                 <div id="add-student-modal" class="modal" style="display:none;">
                     <div class="modal-content">
                         <span class="close-button" id="close-add-student">&times;</span>
